--- a/MyPad/Views/Regions/DiffContentView.xaml
+++ b/MyPad/Views/Regions/DiffContentView.xaml
@@ -33,7 +33,7 @@
         </Grid>
 
         <CheckBox Grid.Row="2" HorizontalAlignment="Right"
-                  IsChecked="{Binding SettingsService.System.ShowInlineDiffViewer, Mode=TwoWay}" Content="{le:Loc LabelText_ShowInlineDiffViewer}"
+                  IsChecked="{Binding SettingsService.OtherTools.ShowInlineDiffViewer, Mode=TwoWay}" Content="{le:Loc LabelText_ShowInlineDiffViewer}"
                   Checked="ShowInlineDiffViewer_Checked" Unchecked="ShowInlineDiffViewer_Unchecked"/>
     </Grid>
     
