--- a/MyPad/Views/Styles/Controls/AvalonEdit.xaml
+++ b/MyPad/Views/Styles/Controls/AvalonEdit.xaml
@@ -65,7 +65,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border Background="{DynamicResource MahApps.Brushes.Control.Background}"
+                    <Border Background="{DynamicResource MahApps.Brushes.Gray10}"
                             BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
                             BorderThickness="0 0 0 2"
                             Padding="3"
@@ -82,8 +82,8 @@
 
                             <Grid.Resources>
                                 <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource Default.TextBox}">
-                                    <Setter Property="Background"  Value="{DynamicResource MahApps.Brushes.Gray10}"/>
-                                    <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Gray8}"/>
+                                    <Setter Property="Background"  Value="{DynamicResource MahApps.Brushes.Gray8}"/>
+                                    <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Gray}"/>
                                     <Setter Property="FontFamily"  Value="{Binding FontFamily, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneWay}"/>
                                     <Setter Property="FontSize"    Value="{Binding FontSize, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneWay}"/>
                                     <Setter Property="MinWidth"    Value="150"/>
