--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -199,6 +199,7 @@
                              HamburgerWidth="{StaticResource HamburgerWidth}"
                              HamburgerVisibility="Collapsed"
                              Visibility="{qc:Binding '$P ? Visibility.Visible : Visibility.Collapsed', P={Binding SettingsService.System.ShowSideBar, Mode=OneWay}}"
+                             IsTabStop="False"
                              ContextMenu="{StaticResource ContextMenu}"
                              ItemInvoked="HamburgerMenu_ItemInvoked">
                 <i:Interaction.Triggers>
