--- a/MyPad/Views/Regions/ToolBarView.xaml
+++ b/MyPad/Views/Regions/ToolBarView.xaml
@@ -115,7 +115,35 @@
                           Header="{le:Loc Command_ConvertSpacesToTabs}"/>
             </m:DropDownButton.Items>
         </m:DropDownButton>
-        
+
+        <m:DropDownButton ToolTip="{le:Loc Command_Coding}">
+            <m:DropDownButton.Icon>
+                <mi:Material Kind="CodeTags"/>
+            </m:DropDownButton.Icon>
+            <m:DropDownButton.Items>
+                <MenuItem Command="controls:TextArea+Commands.Completion"
+                          Header="{le:Loc Command_Completion}">
+                    <MenuItem.Icon>
+                        <mi:Material Kind="AutoFix"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Command="controls:TextArea+Commands.Folding"
+                          Header="{le:Loc Command_Folding}"
+                          InputGestureText="Ctrl+Shift+[">
+                    <MenuItem.Icon>
+                        <mi:Octicons Kind="Fold"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Command="controls:TextArea+Commands.Unfolding"
+                          Header="{le:Loc Command_Unfolding}"
+                          InputGestureText="Ctrl+Shift+]">
+                    <MenuItem.Icon>
+                        <mi:Octicons Kind="Unfold"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+            </m:DropDownButton.Items>
+        </m:DropDownButton>
+
         <Separator Margin="5"/>
 
         <ToggleButton IsChecked="{Binding SettingsService.TextEditor.ShowColumnRuler, Mode=TwoWay}"
