--- a/MyPad/Views/Regions/MenuBarView.xaml
+++ b/MyPad/Views/Regions/MenuBarView.xaml
@@ -278,24 +278,39 @@
             </MenuItem>
             <MenuItem IsCheckable="True" IsChecked="{Binding Topmost, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=TwoWay}" Header="{le:Loc Command_Topmost}"/>
             <Separator/>
-            <MenuItem IsCheckable="True" IsChecked="{Binding SettingsService.System.ShowMenuBar,   Mode=TwoWay}" Header="{le:Loc Command_ShowMenuBar}"/>
-            <MenuItem IsCheckable="True" IsChecked="{Binding SettingsService.System.ShowToolBar,   Mode=TwoWay}" Header="{le:Loc Command_ShowToolBar}"/>
-            <MenuItem IsCheckable="True" IsChecked="{Binding SettingsService.System.ShowSideBar,   Mode=TwoWay}" Header="{le:Loc Command_ShowSideBar}"/>
-            <MenuItem IsCheckable="True" IsChecked="{Binding SettingsService.System.ShowStatusBar, Mode=TwoWay}" Header="{le:Loc Command_ShowStatusBar}"/>
-            <Separator/>
-            <MenuItem Header="{le:Loc Command_Panels}">
-                <MenuItem Command="{x:Static views:MainWindow.ActivateFileExplorer}"
+            <MenuItem Header="{le:Loc Command_WindowStructure}">
+                <MenuItem IsCheckable="True" IsChecked="{Binding SettingsService.System.ShowMenuBar,   Mode=TwoWay}" Header="{le:Loc Command_ShowMenuBar}"/>
+                <MenuItem IsCheckable="True" IsChecked="{Binding SettingsService.System.ShowToolBar,   Mode=TwoWay}" Header="{le:Loc Command_ShowToolBar}"/>
+                <MenuItem IsCheckable="True" IsChecked="{Binding SettingsService.System.ShowSideBar,   Mode=TwoWay}" Header="{le:Loc Command_ShowSideBar}"/>
+                <MenuItem IsCheckable="True" IsChecked="{Binding SettingsService.System.ShowStatusBar, Mode=TwoWay}" Header="{le:Loc Command_ShowStatusBar}"/>
+            </MenuItem>
+            <MenuItem Header="{le:Loc Command_Contents}">
+                <MenuItem Command="{x:Static views:MainWindow.ActivateFileExplorerCommand}"
                           Header="{le:Loc Command_Explorer}"
                           InputGestureText="Ctrl+Shift+E">
                     <MenuItem.Icon>
                         <mi:Material Kind="FileTree"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Command="{x:Static views:MainWindow.ActivateProperty}"
+                <MenuItem Command="{x:Static views:MainWindow.ActivatePropertyCommand}"
                           Header="{le:Loc Command_Property}"
                           InputGestureText="Alt+Enter">
                     <MenuItem.Icon>
                         <mi:Material Kind="FileOutline"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Command="{x:Static views:MainWindow.ActivateTerminalCommand}"
+                          Header="{le:Loc Command_Terminal}"
+                          InputGestureText="Ctrl+@">
+                    <MenuItem.Icon>
+                        <mi:Material Kind="Console"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Command="{x:Static views:MainWindow.ActivateScriptRunnerCommand}"
+                          Header="{le:Loc Command_ScriptRunner}"
+                          InputGestureText="Ctrl+Shift+@">
+                    <MenuItem.Icon>
+                        <mi:Material Kind="Xml"/>
                     </MenuItem.Icon>
                 </MenuItem>
             </MenuItem>
