--- a/MyPad/Views/Regions/StatusBarView.xaml
+++ b/MyPad/Views/Regions/StatusBarView.xaml
@@ -53,13 +53,16 @@
                     <Setter Property="BorderThickness" Value="0"/>
                     <Setter Property="m:ControlsHelper.MouseOverBorderBrush" Value="{StaticResource DarkBlueColorBrush}"/>
                     <Style.Triggers>
+                        <!-- マウスオーバー時の背景色を上書きする -->
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Background" Value="{StaticResource DarkBlueColorBrush}"/>
                         </Trigger>
+                        <!-- チェック状態時の背景色を上書きする -->
                         <Trigger Property="IsChecked" Value="True">
                             <Setter Property="Background" Value="{Binding Background, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
                             <Setter Property="BorderBrush" Value="{Binding Background, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
                         </Trigger>
+                        <!-- チェック状態かつマウスオーバー時の背景色を上書きする -->
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsMouseOver" Value="True"/>
