--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -383,8 +383,9 @@
 
             <GridSplitter Grid.Column="1" Grid.RowSpan="3"
                           Width="{qc:MultiBinding '$P0 == Visibility.Visible ## double.IsNaN($P1) ? 5 : 0',
-                                 P0={Binding Visibility, ElementName=HamburgerMenu, Mode=OneWay},
-                                 P1={Binding Width, ElementName=HamburgerMenu, Mode=OneWay}}"/>
+                                 P0={Binding Visibility, ElementName=SideContent, Mode=OneWay},
+                                 P1={Binding Width, ElementName=SideContent, Mode=OneWay}}"
+                          DragCompleted="ColumnSplitter_DragCompleted"/>
 
             <controls:DraggableTabControl Grid.Column="2" Grid.Row="0" x:Name="MainContent"
                                           ItemsSource="{Binding TextEditors, Mode=OneWay}"
